# HelsincyLauncher

./: .gitignore  .windsurfrules  CONTRIBUTING.md  Cargo.toml  MyEpicLauncher.pen  README.md  findings.md  package-lock.json  package.json  progress.md  tailwind.config.ts  task_plan.md
.artifacts/ai/: README.md  active-task.md  findings.md  handoff.md  plan-AT052-054.md  progress.md  task-plan.md
.artifacts/ai/legacy-root-planning/: README.md  findings.md  progress.md  task_plan.md
.codex/hooks/: planning_state.py
.codex/skills/focused-module-implementer/: SKILL.md
.github/: copilot-instructions.md
.github/hooks/: planning-with-files.json
.github/hooks/scripts/: agent-stop.ps1  agent-stop.sh  error-occurred.ps1  error-occurred.sh  post-tool-use.ps1  post-tool-use.sh  pre-tool-use.ps1  pre-tool-use.sh  session-start.ps1  session-start.sh
.github/prompts/: comment-en.prompt.md  comment-zh.prompt.md  hsy-comment-en.prompt.md  hsy-comment-zh.prompt.md  hsy-plan-atomic-task.prompt.md  hsy-plan-backend-skeleton.prompt.md  hsy-plan-doc-review.prompt.md  hsy-resume-from-handoff.prompt.md  plan-atomic-task.prompt.md  plan-backend-skeleton.prompt.md  plan-doc-review.prompt.md  resume-from-handoff.prompt.md
.github/skills/planning-with-files/: SKILL.md  examples.md
.github/skills/strict-doc-driven-development/: SKILL.md  active-atomic-task-template.md  blocked-bug-template.md  docs-update-log-template.md  hook-messages.en.txt  hook-messages.zh-CN.txt  pending-push-template.md  session-bootstrap.en.txt  session-bootstrap.txt  session-bootstrap.zh-CN.txt  session-start.en.txt  session-start.txt  session-start.zh-CN.txt  subtask-template.md
.windsurf/rules/: repo-workflow.md
app/: globals.css  layout.tsx  page.tsx
components/: AccountLogin.tsx  Downloads.tsx  DownloadsContent.tsx  EngineManagement.tsx  EngineManagementContent.tsx  FabInventory.tsx  FabInventoryContent.tsx  HeroProject.tsx  HomeContent.tsx  MyProjectsContent.tsx  Settings.tsx  SettingsContent.tsx  Sidebar.tsx  TopBar.tsx
crates/adapter-provider-fab/: Cargo.toml
crates/adapter-provider-fab/src/: lib.rs
crates/adapter-storage-sqlite/: Cargo.toml
crates/adapter-storage-sqlite/src/: lib.rs
crates/composition-root/: Cargo.toml  launcher.sqlite3
crates/composition-root/src/: bootstrap.rs  lib.rs  startup.rs
crates/composition-root/tests/: bootstrap_wiring_smoke.rs
crates/kernel-foundation/: Cargo.toml
crates/kernel-foundation/src/: clock.rs  error.rs  ids.rs  lib.rs  paging.rs  result.rs  time.rs
crates/kernel-foundation/tests/: foundation_contract_smoke.rs
crates/kernel-jobs/: Cargo.toml
crates/kernel-jobs/src/: lib.rs  model.rs  runtime.rs
crates/module-downloads/: Cargo.toml
crates/module-downloads/src/: driver.rs  lib.rs
crates/module-engines/: Cargo.toml
crates/module-engines/src/: driver.rs  lib.rs
crates/module-engines/src/contracts/: mod.rs
crates/module-engines/src/facade/: mod.rs
crates/module-fab/: Cargo.toml
crates/module-fab/src/: driver.rs  lib.rs
crates/module-fab/src/contracts/: commands.rs  dto.rs  events.rs  mod.rs  queries.rs
crates/module-fab/src/facade/: mod.rs
docs/: ModuleDocumentationStandard.md  README.md  TauriAIContextManagementIntegrationDesign.md  TauriAIDevelopmentTransactionProtocolDesign.md  TauriArchitecturePrinciplesDesign.md  TauriBackendCrateLayoutAndUseCaseStubDesign.md  TauriBackendSkeletonImplementationDesign.md  TauriCodeCommentStandard.md  TauriCompositionRootWiringDesign.md  TauriCurrentRepoArchitectureOverview.md  TauriDevelopmentEnvironmentBootstrapDesign.md  TauriDocumentationBenchmarkAgainstCodexManager.md  TauriDownloadRuntimeDesign.md  TauriEngineVerificationRepairDesign.md  TauriErrorHandlingAndProjectionDesign.md  TauriFabInventoryLoadingDesign.md  TauriFirstCrateApiDrafts.md  TauriIPCAndStateContractsDesign.md  TauriKernelJobsRuntimeDesign.md  TauriLoggingAndObservabilityDesign.md  TauriReleasePackagingAndUpdateDesign.md  TauriRepositoryPortsAndAdapterDesign.md  TauriRewriteArchitectureBlueprint.md  TauriRustTsSchemaDesign.md  TauriSecurityCredentialsAndPermissionsDesign.md  TauriStartupPipelineDesign.md  TauriStorageAndDatabaseDesign.md  TauriTestingStrategyAndQualityGateDesign.md
docs/modules/_template/: README_API.md  README_ARCH.md  README_FLOW.md  README_IMPL.md
docs/modules/account-auth/: README_API.md  README_ARCH.md  README_FLOW.md
docs/modules/downloads/: README_API.md  README_ARCH.md  README_FLOW.md  README_IMPL.md
docs/modules/engines/: README_API.md  (+2 more)
src-tauri/: Cargo.toml  launcher.sqlite3  tauri.conf.json
src-tauri/src/: bootstrap.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: downloads.rs  engines.rs  fab.rs  jobs.rs  mod.rs
src-tauri/tests/: transport_wiring_smoke.rs
(+31 files in other folders)
