[workspace]
members = ["src-tauri", "crates/kernel-foundation", "crates/kernel-jobs", "crates/module-fab"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }