[workspace]
members = ["src-tauri", "crates/kernel-foundation", "crates/kernel-jobs", "crates/module-fab", "crates/module-downloads", "crates/module-engines", "crates/adapter-storage-sqlite", "crates/adapter-provider-fab", "crates/composition-root"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }