[package]
name = "my-epic-launcher-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "my_epic_launcher_desktop"
path = "src/lib.rs"

[[bin]]
name = "my-epic-launcher-desktop"
path = "src/main.rs"

[dependencies]
launcher-composition-root = { path = "../crates/composition-root" }
launcher-kernel-foundation = { path = "../crates/kernel-foundation" }
launcher-kernel-jobs = { path = "../crates/kernel-jobs" }
launcher-module-downloads = { path = "../crates/module-downloads" }
launcher-module-fab = { path = "../crates/module-fab" }
launcher-module-engines = { path = "../crates/module-engines" }