[package]
name = "launcher-adapter-provider-fab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "launcher_adapter_provider_fab"
path = "src/lib.rs"

[dependencies]
launcher-kernel-foundation = { path = "../kernel-foundation" }
launcher-module-fab = { path = "../module-fab" }