[package]
name = "launcher-kernel-foundation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "launcher_kernel_foundation"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json = "1"