[package]
name = "launcher-module-engines"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
launcher-kernel-foundation = { path = "../kernel-foundation" }
launcher-kernel-jobs = { path = "../kernel-jobs" }

serde = { workspace = true, features = ["derive"] }
